--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "babel-loader": "^6.2.4",
     "babel-preset-es2015": "^6.9.0",
     "babel-preset-react": "^6.5.0",
+    "css-modules-require-hook": "^4.0.5",
     "express": "^4.13.4",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1"
   },
@@ -21,5 +23,8 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "version": "1.0.0"
+  "version": "1.0.0",
+  "devDependencies": {
+    "css-loader": "^0.25.0"
+  }
 }
